--- a/WebSiteGoTianYa/webapp/index.html
+++ b/WebSiteGoTianYa/webapp/index.html
@@ -35,6 +35,10 @@
             float: left !important;
         }
 
+        .nav-tabs > li > a {
+            height: 47px;
+        }
+
         #pageTabContent h2 {
             font-size: 16px;
             font-weight: bold;
@@ -81,11 +85,11 @@
         }
 
             .route-search-box .route-input-box .start i, .route-search-box .route-input-box .through i {
-                background: url(http://webmap1.map.bdstatic.com/wolfman/static/common/images/ui3/mo_banner_ba37b5d.png) no-repeat -44px -210px;
+                background: url(./imgs/mo_banner_ba37b5d.png) no-repeat -44px -210px;
             }
 
             .route-search-box .route-input-box .end i {
-                background: url(http://webmap1.map.bdstatic.com/wolfman/static/common/images/ui3/mo_banner_ba37b5d.png) no-repeat -57px -210px;
+                background: url(./imgs/mo_banner_ba37b5d.png) no-repeat -57px -210px;
             }
 
             .route-search-box .route-input-box i {
@@ -139,7 +143,7 @@
             position: absolute;
             width: 16px;
             height: 16px;
-            background: url(http://webmap1.map.bdstatic.com/wolfman/static/common/images/ui3/mo_banner_ba37b5d.png) no-repeat -1px -223px;
+            background: url(./imgs/mo_banner_ba37b5d.png) no-repeat -1px -223px;
             right: 10px;
             top: 14px;
             cursor: pointer;
@@ -149,7 +153,7 @@
             position: absolute;
             width: 16px;
             height: 16px;
-            background: url(http://webmap1.map.bdstatic.com/wolfman/static/common/images/ui3/mo_banner_ba37b5d.png) no-repeat -19px -223px;
+            background: url(./imgs/mo_banner_ba37b5d.png) no-repeat -19px -223px;
             right: 10px;
             top: 14px;
             cursor: pointer;
@@ -184,7 +188,7 @@
 </head>
 
 <body>
-
+    <span data-bind="text:ko.toJSON(window.myapp.lushuViewModel)"></span>
     <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
         <div class="container">
             <div class="navbar-header">
@@ -225,7 +229,7 @@
 
             <div class="row">
 
-                <div class="col-md-6" style="">
+                <div class="col-md-6" id="contentContainer" style="overflow-y:auto;">
 
                     <!--<div class="container-fluid" style="margin:10px">
                         <div class="row">
@@ -309,9 +313,9 @@
 
                         <script type="text/html" id="tabTitle-template">
 
-                            <li data-bind="css: { active: isactive == true }">
-                                <a data-toggle="tab" data-bind="attr: { href: '#page' + dayNumber }">
-                                    <span data-bind="text: 'D' + dayNumber"></span> <button class="close" type="button" title="Remove this page" data-bind="if: dayNumber != 1">×</button>
+                            <li data-bind="css: { active: $parent.dayActive() == dayNumber() }">
+                                <a data-toggle="tab" data-bind="attr: { href: '#page' + dayNumber(), dataid: dayNumber() }">
+                                    <span data-bind="text: 'D' + dayNumber()"></span> <button class="close" type="button" title="Remove this page" data-bind="if: dayNumber() != 1, click:$parent.removeDay">×</button>
                                 </a>
                             </li>
 
@@ -319,15 +323,16 @@
 
                         <script type="text/html" id="tabPage-template">
 
-                            <div class="tab-pane active" data-bind="attr: { id: '#page' + dayNumber }">
+                            <div class="tab-pane" data-bind="attr: { id: 'page' + dayNumber() }, css: { active: $parent.dayActive() == dayNumber() }">
                                 <div class="clearfix">
                                     <h2>
-                                        行程：<span style="font-size:12px;">(右键地图添加行程)</span>
+                                       <span data-bind="text: dayNumber()"></span> 行程：
                                     </h2>
-                                    <ul class="tourlist" data-bind="foreach: contacts">
+                                    <button type="button" data-bind="click: addCity">添加行程点</button>
+                                    <ul class="tourlist" data-bind="foreach: cities">
                                         <li>
-                                            <a data-bind="text:name">xxx</a> <!--(<span data-bind="text:point.lat"></span>,<span data-bind="text:point.lng"></span>)-->
-                                            <a href="#" style="float:right" data-bind="click:$parent.removePoint">删除</a>
+                                            <input type="text" name="txtAreaName" data-bind="$data" />
+                                            <a href="#" style="float:right" data-bind="click:$parent.removeCity">删除</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -336,7 +341,7 @@
                                         描述：
                                         <a href="javascript:;" class="EditDescModal" style="float:right;">编辑</a>
                                     </h2>
-                                    <div>
+                                    <div class="txtDescription" data-bind="html: description">
                                         
                                     </div>
                                 </div>
@@ -347,7 +352,7 @@
                                     </h2>
                                     <div>
                                         <a href="#">
-                                            <img src="http://img2.xdpie.com/555a0f88-89dd-4b31-8aac-82a4e50c6786.jpg" width="100" />
+                                            <img src="./upload/555a0f88-89dd-4b31-8aac-82a4e50c6786.jpg" width="100" />
                                         </a>
                                     </div>
                                 </div>
@@ -364,6 +369,7 @@
                                 </li>
                             </ul>
                             <div id="pageTabContent" class="tab-content" data-bind="template: { name: 'tabPage-template', foreach: dayList }">
+                                
                                 <div class="tab-pane active" id="page1">
                                     <div class="clearfix">
                                         <h2>
@@ -372,7 +378,7 @@
                                         <!-- ko if: contacts -->
                                         <ul class="tourlist" data-bind="foreach: contacts">
                                             <li>
-                                                <a data-bind="text:name">xxx</a> <!--(<span data-bind="text:point.lat"></span>,<span data-bind="text:point.lng"></span>)-->
+                                                <a data-bind="text:name">xxx</a>
                                                 <a href="#" style="float:right" data-bind="click:$parent.removePoint">删除</a>
                                             </li>
                                         </ul>
@@ -383,7 +389,7 @@
                                             描述：
                                             <a href="javascript:;" class="EditDescModal" style="float:right;">编辑</a>
                                         </h2>
-                                        <div>
+                                        <div class="txtDescription">
                                             想要只用一种颜色来形容云贵高原的秋天是件很难的事，秋天，各地有着极其丰富的色彩，那些森林、那些湖泊、那些雪山、那些草甸，都因为有了色彩的衬托而变得让人心跳加速。浓浓的秋意袭来，天气晴朗，空气洁净，行车于崇山峻岭当中，群山已经被秋色渲染，绿色、金色、红色缤纷交错，这一条色彩的旅程，7天时间，流连期间，甚是美好。
                                             <br>
                                             从成都出发，趁着秋日微凉，路上十分顺利，成都到昆明的路况以高速为主，路况总体不错，如果是长假出行遇到车流量较大，可能路上耗时会略长一些，建议带些干粮和矿泉水上路，以备不时之需。
@@ -410,6 +416,7 @@
                                     </div>
 
                                 </div>
+
                             </div>
 
                         </div>
@@ -499,7 +506,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary btn-sm">保存</button>
+                    <button type="button" id="btnSaveEditor" class="btn btn-primary btn-sm">保存</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
