--- a/WebSiteGoTianYa/webapp/index.html
+++ b/WebSiteGoTianYa/webapp/index.html
@@ -10,6 +10,9 @@
     <link href="./css/font-awesome.min.css" rel="stylesheet">
     <link href="./style/index.css" rel="stylesheet">
 
+    <link href="./js/webuploader/webuploader.css" rel="stylesheet" />
+    <link href="./style/uploadDemo.css" rel="stylesheet" />
+
     <style type="text/css">
         body,
         html,
@@ -47,7 +50,7 @@
         }
 
         ul.tourlist {
-            clear: both;
+            clear: both; padding:0;
         }
 
             ul.tourlist li {
@@ -331,7 +334,7 @@
                                     <button type="button" data-bind="click: addCity">添加行程点</button>
                                     <ul class="tourlist" data-bind="foreach: cities">
                                         <li>
-                                            <input type="text" name="txtAreaName" data-bind="$data" />
+                                            <input type="text" name="txtAreaName" data-bind="value:$data" />
                                             <a href="#" style="float:right" data-bind="click:$parent.removeCity">删除</a>
                                         </li>
                                     </ul>
@@ -348,7 +351,7 @@
                                 <div>
                                     <h2>
                                         图片：
-                                        <a href="javascript:;" class="EditDescModal" style="float:right;">编辑</a>
+                                        <a href="javascript:;" class="EditPicModal" style="float:right;">编辑</a>
                                     </h2>
                                     <div>
                                         <a href="#">
@@ -400,7 +403,7 @@
                                     <div>
                                         <h2>
                                             图片：
-                                            <a href="javascript:;" class="EditDescModal" style="float:right;">编辑</a>
+                                            <a href="javascript:;" class="EditPicModal" style="float:right;">编辑</a>
                                         </h2>
                                         <div>
                                             <a href="#">
@@ -491,7 +494,7 @@
     </div>
 
     <!-- Modal ConfirmModel -->
-    <div class="modal fade" id="ConfirmModel" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal" id="ConfirmModel" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -512,10 +515,50 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+    <!-- Modal uploadPicModal -->
+    <div class="modal" id="uploadPicModal" tabindex="-1" role="dialog" aria-labelledby="uploadPicModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="uploadPicModalLabel">上传图片</h4>
+                </div>
+                <div class="modal-body">
+                    
+                    <!--头部，相册选择和格式选择-->
+                    <div id="uploader">
+                        <div class="queueList">
+                            <div id="dndArea" class="placeholder">
+                                <div id="filePicker"></div>
+                                <p>或将照片拖到这里，单次最多可选5张</p>
+                            </div>
+                        </div>
+                        <div class="statusBar" style="display:none;">
+                            <div class="progress">
+                                <span class="text">0%</span>
+                                <span class="percentage"></span>
+                            </div><div class="info"></div>
+                            <div class="btns">
+                                <div id="filePicker2"></div><div class="uploadBtn">开始上传</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/jquery-2.1.4.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/webuploader/webuploader.js"></script>
     <script src="./js/knockout-3.3.0.js"></script>
+
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/upload.js"></script>
 
 </body>
 
